--- a/SocialNetworkAnalyzer.App/SocialNetworkAnalyzer.App/MainWindow.xaml
+++ b/SocialNetworkAnalyzer.App/SocialNetworkAnalyzer.App/MainWindow.xaml
@@ -147,12 +147,16 @@
 
             <TextBlock Text="Başlangıç Node Id (boşsa seçili node kullanılır)"/>
             <TextBox x:Name="InStartNodeId" Margin="0,2,0,8"/>
+            
+            <TextBlock Text="Hedef Node Id"/>
+            <TextBox x:Name="InTargetNodeId" Margin="0,2,0,8"/>
 
             <WrapPanel>
               <Button Content="BFS Çalıştır" Width="110" Margin="0,0,8,8" Click="BtnBfs_Click"/>
               <Button Content="DFS Çalıştır" Width="110" Margin="0,0,8,8" Click="BtnDfs_Click"/>
-              <Button Content="Highlight Temizle" Width="130" Margin="0,0,8,8" Click="BtnClearHighlight_Click"/>
               <Button Content="Degree Top-5" Width="110" Margin="0,0,8,8" Click="BtnDegreeTop5_Click"/>
+              <Button Content="Dijkstra" Width="110" Margin="0,0,8,8" Click="BtnDijkstra_Click"/>
+              <Button Content="Highlight Temizle" Width="130" Margin="0,0,8,8" Click="BtnClearHighlight_Click"/>
             </WrapPanel>
 
             <Separator Margin="0,12,0,12"/>
